created working search bar with random gif replacer

--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
 <body>
 
 	<div id="search">
-		<label for="word">Word</label>
-		<input type="text" id="word">
-		<button id="set">Set Word</button>
+		<label for="word"></label>
+		<input type="text" placeholder="Search..." id="word">
+		<button id="set">GO</button>
 	</div>
+
+	<div class="gif">
+	</div>
+
+
 
 	<!-- link to jQuery -->
 	<script src="js/lib/jQuery-min.js"></script>
